src/objects/CC_ClearIT_Queues__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Contact Center project. Mapping of Salesforce Queue names with corresponding ClearIT Queue names.</description>
    <fields>
        <fullName>ClearIT_Queue_Id__c</fullName>
        <description>Relevant only for Live Agent Chat entry.</description>
        <inlineHelpText>Relevant only for Live Agent Chat entry.</inlineHelpText>
        <label>ClearIT Queue Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClearIT_Queue_Name__c</fullName>
        <description>Clear IT queue identifier.</description>
        <inlineHelpText>Clear IT queue identifier.</inlineHelpText>
        <label>ClearIT Queue Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <label>CC ClearIT Queues</label>
</CustomObject>